Moved settings and player stats into config file.

--- a/DragoonSimulator/App.config
+++ b/DragoonSimulator/App.config
@@ -1,6 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
-    </startup>
+  <startup> 
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+  </startup>
+  <appSettings>
+    <!-- General Settings -->
+    <add key="NumTrials" value="10"/>
+    
+    <!-- Attributes and Offensive Stats -->
+    <add key="STR" value="935"/>
+    <add key="CRT" value="594"/>
+    <add key="DET" value="461"/>
+    <add key="SKS" value="599"/>
+
+    <!-- Weapon Stats -->
+    <add key="WD" value="74"/>
+    <add key="AA" value="71.04"/>
+    <add key="AA_DELAY" value="2.88"/>
+  </appSettings>
 </configuration>
