--- a/DragoonSimulator/DragoonSimulator.csproj
+++ b/DragoonSimulator/DragoonSimulator.csproj
@@ -68,6 +68,9 @@
     <Content Include="Rotation.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <None Include="README.md">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
