Beginnings of the BIS solver.

--- a/DragoonSimulator/App.config
+++ b/DragoonSimulator/App.config
@@ -1,18 +1,81 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <section name="Inventory" type="DragoonSimulator.Configuration.Inventory, DragoonSimulator"/>
+  </configSections>
   <startup> 
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
   </startup>
   <appSettings>
     <!-- Attributes and Offensive Stats -->
-    <add key="STR" value="1074"/>
-    <add key="CRT" value="821"/>
-    <add key="DET" value="505"/>
-    <add key="SKS" value="587"/>
+    <add key="STR" value="978"/>
+    <add key="CRT" value="653"/>
+    <add key="DET" value="391"/>
+    <add key="SKS" value="588"/>
 
     <!-- Weapon Stats -->
-    <add key="WD" value="76"/>
-    <add key="AA" value="72.96"/>
+    <add key="WD" value="74"/>
+    <add key="AA" value="71.04"/>
     <add key="AA_DELAY" value="2.88"/>
+    
+    <!-- Base Stats - Used for BIS Solver -->
+    <add key="BASE_STR" value="300"/>
+    <add key="BASE_CRT" value="354"/>
+    <add key="BASE_DET" value="218"/>
+    <add key="BASE_SKS" value="354"/>
   </appSettings>
+  <Inventory>
+    <MainHand>
+      <item name="Hive Spear" wd="72.00" aa="67.20" delay="2.80" str="92" acc="0" crt="83" det="0" sks="58"/>
+      <item name="Antiquated Brionac" wd="74.00" aa="71.04" delay="2.88" str="101" acc="0" crt="92" det="0" sks="64"/>
+    </MainHand>
+    <Head>
+      <item name="Prototype Gordian Sallet of Maiming" str="53" acc="47" crt="33" det="0" sks="0"/>
+      <item name="Antiquated Dragonlancer's Mesail" str="57" acc="0" crt="0" det="50" sks="37"/>
+    </Head>
+    <Body>
+      <item name="Prototype Gordian Mail of Maiming" str="86" acc="0" crt="77" det="0" sks="54"/>
+      <item name="Antiquated Dragonlancer's Plackart" str="93" acc="86" crt="60" det="0" sks="0"/>
+    </Body>
+    <Hands>
+      <item name="Prototype Gordian Gauntlets of Maiming" str="53" acc="47" crt="0" det="32" sks="0"/>
+      <item name="Antiquated Dragonlancer's Vambraces" str="57" acc="37" crt="0" det="50" sks="0"/>
+    </Hands>
+    <Waist>
+      <item name="Prototype Gordian Tassets of Maiming" str="40" acc="36" crt="0" det="24" sks="0"/>
+      <item name="Ardent Belt of Maiming" str="43" acc="0" crt="28" det="38" sks="0"/>
+    </Waist>
+    <Legs>
+      <item name="Prototype Gordian Breeches of Maiming" str="86" acc="54" crt="0" det="0" sks="77"/>
+      <item name="Antiquated Dragonlancer's Cuissots" str="93" acc="0" crt="86" det="0" sks="60"/>
+    </Legs>
+    <Feet>
+      <item name="Prototype Gordian Sabatons of Maiming" str="53" acc="33" crt="0" det="45" sks="0"/>
+      <item name="Antiquated Dragonlancer's Schynbalds" str="57" acc="53" crt="0" det="35" sks="0"/>
+    </Feet>
+    <OffHand>
+      <item name="N/A" str="0" acc="0" crt="0" det="0" sks="0"/>
+    </OffHand>
+    <Neck>
+      <item name="Prototype Gordian Neckband of Slaying" str="40" acc="36" crt="25" det="0" sks="0"/>
+      <item name="Ardent Necklace of Slaying" str="43" acc="0" crt="39" det="0" sks="28"/>
+    </Neck>
+    <Ears>
+      <item name="Prototype Gordian Earrings of Slaying" str="40" acc="0" crt="0" det="34" sks="25"/>
+      <item name="Ardent Earrings of Slaying" str="43" acc="39" crt="0" det="27" sks="0"/>
+    </Ears>
+    <Wrists>
+      <item name="Prototype Gordian Wristband of Slaying" str="40" acc="0" crt="25" det="0" sks="36"/>
+      <item name="Ardent Bracelet of Slaying" str="43" acc="39" crt="28" det="0" sks="0"/>
+    </Wrists>
+    <Rings>
+      <item name="Asuran Ring of Slaying" str="36" acc="22" crt="0" det="0" sks="32"/>
+      <item name="Prototype Gordian Ring of Slaying" str="40" acc="0" crt="36" det="24" sks="0"/>
+      <item name="Ardent Ring of Slaying" str="43" acc="28" crt="0" det="0" sks="39"/>
+    </Rings>
+    <Food>
+      <item name="Black Truffle Risotto" accModifier="1.00" maxAccBonus="0" crtModifier="1.02" maxCrtBonus="11" detModifier="1.05" maxDetBonus="17" sksModifier="1.00" sks="0"/>
+      <item name="Baked Pipira Pira" accModifier="1.03" maxAccBonus="18" crtModifier="1.05" maxCrtBonus="37" detModifier="1.00" maxDetBonus="0" sksModifier="1.00" sks="0"/>
+    </Food>
+  </Inventory>
 </configuration>
