--- a/DragoonSimulator/App.config
+++ b/DragoonSimulator/App.config
@@ -7,31 +7,36 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
   </startup>
   <appSettings>
+    <!-- FileName of the file containing the rotation -->
+    <add key="RotationFileName" value="HigherSkillSpeedRotation.txt"/>
+    
     <!-- Attributes and Offensive Stats -->
     <add key="STR" value="1018"/>
     <add key="CRT" value="750"/>
     <add key="DET" value="398"/>
-    <add key="SKS" value="626"/>
+    <add key="SKS" value="630"/>
 
     <!-- Weapon Stats -->
     <add key="WD" value="74"/>
     <add key="AA" value="71.04"/>
     <add key="AA_DELAY" value="2.88"/>
     
-    <!-- Base Stats - Used for BIS Solver -->
+    <!-- Base Stats - Used for BIS Solver. When using the standard rotation, 
+    SKS may range from 463 to 626. When using the HigherSkillSpeedRotation,
+    SKS may range from 627 to 669. -->
     <add key="BASE_STR" value="300"/>
     <add key="BASE_ACC" value="354"/>
     <add key="BASE_CRT" value="354"/>
     <add key="BASE_DET" value="218"/>
     <add key="BASE_SKS" value="354"/>
     <add key="MIN_ACC" value="637"/>
-    <add key="MIN_SKS" value="463"/>
-    <add key="MAX_SKS" value="626"/>
+    <add key="MIN_SKS" value="627"/>
+    <add key="MAX_SKS" value="669"/>
   </appSettings>
   <Inventory>
     <MainHand>
-      <item name="Gordian Trident" wd="76.00" aa="72.96" delay="2.88" str="109" acc="0" crt="71" det="97" sks="0"/>
-      <item name="Brionac" wd="76.00" aa="72.96" delay="2.80" str="109" acc="0" crt="102" det="0" sks="71"/>
+<!--      <item name="Gordian Trident" wd="76.00" aa="72.96" delay="2.88" str="109" acc="0" crt="71" det="97" sks="0"/>-->
+<!--      <item name="Brionac" wd="76.00" aa="72.96" delay="2.80" str="109" acc="0" crt="102" det="0" sks="71"/>-->
       <item name="Antiquated Brionac" wd="74.00" aa="71.04" delay="2.88" str="101" acc="0" crt="92" det="0" sks="64"/>
       <item name="Hive Spear" wd="72.00" aa="67.20" delay="2.80" str="92" acc="0" crt="83" det="0" sks="58"/>
     </MainHand>
@@ -39,24 +44,24 @@
       <item name="Dragonlancer's Mesail" str="62" acc="0" crt="0" det="56" sks="41"/>
       <item name="Gordian Sallet of Maiming" str="62" acc="58" crt="41" det="0" sks="0"/>
       <item name="Antiquated Dragonlancer's Mesail" str="57" acc="0" crt="0" det="50" sks="37"/>
-      <item name="Prototype Gordian Sallet of Maiming" str="53" acc="47" crt="33" det="0" sks="0"/>
+<!--      <item name="Prototype Gordian Sallet of Maiming" str="53" acc="47" crt="33" det="0" sks="0"/>-->
     </Head>
     <Body>
       <item name="Dragonlancer's Plackart" str="101" acc="94" crt="66" det="0" sks="0"/>
-      <item name="Gordian Mail of Maiming" str="101" acc="0" crt="0" det="63" sks="94"/>
-      <item name="Antiquated Dragonlancer's Plackart" str="93" acc="86" crt="60" det="0" sks="0"/>
+<!--      <item name="Gordian Mail of Maiming" str="101" acc="0" crt="0" det="63" sks="94"/>-->
+<!--      <item name="Antiquated Dragonlancer's Plackart" str="93" acc="86" crt="60" det="0" sks="0"/>-->
       <item name="Prototype Gordian Mail of Maiming" str="86" acc="0" crt="77" det="0" sks="54"/>
     </Body>
     <Hands>
       <item name="Dragonlancer's Vambraces" str="62" acc="41" crt="0" det="56" sks="0"/>
       <item name="Gordian Gauntlets of Maiming" str="62" acc="0" crt="58" det="0" sks="41"/>
-      <item name="Antiquated Dragonlancer's Vambraces" str="57" acc="37" crt="0" det="50" sks="0"/>
+<!--      <item name="Antiquated Dragonlancer's Vambraces" str="57" acc="37" crt="0" det="50" sks="0"/>-->
       <item name="Prototype Gordian Gauntlets of Maiming" str="53" acc="47" crt="0" det="32" sks="0"/>
     </Hands>
     <Waist>
       <item name="Gordian Tassets of Maiming" str="47" acc="44" crt="0" det="0" sks="30"/>
       <item name="Fabled Belt of Maiming" str="47" acc="0" crt="30" det="42" sks="0"/>
-      <item name="Ardent Belt of Maiming" str="43" acc="0" crt="28" det="38" sks="0"/>
+<!--      <item name="Ardent Belt of Maiming" str="43" acc="0" crt="28" det="38" sks="0"/>-->
       <item name="Prototype Gordian Tassets of Maiming" str="40" acc="36" crt="0" det="24" sks="0"/>
     </Waist>
     <Legs>
@@ -68,7 +73,7 @@
     <Feet>
       <item name="Dragonlancer's Schynbalds" str="62" acc="58" crt="0" det="39" sks="0"/>
       <item name="Gordian Sabatons of Maiming" str="62" acc="41" crt="0" det="0" sks="58"/>
-      <item name="Antiquated Dragonlancer's Schynbalds" str="57" acc="53" crt="0" det="35" sks="0"/>
+<!--      <item name="Antiquated Dragonlancer's Schynbalds" str="57" acc="53" crt="0" det="35" sks="0"/>-->
       <item name="Prototype Gordian Sabatons of Maiming" str="53" acc="33" crt="0" det="45" sks="0"/>
     </Feet>
     <OffHand>
@@ -83,13 +88,13 @@
     <Ears>
       <item name="Fabled Earrings of Slaying" str="47" acc="44" crt="0" det="29" sks="0"/>
       <item name="Gordian Earrings of Slaying" str="47" acc="0" crt="44" det="29" sks="0"/>
-      <item name="Ardent Earrings of Slaying" str="43" acc="39" crt="0" det="27" sks="0"/>
+<!--      <item name="Ardent Earrings of Slaying" str="43" acc="39" crt="0" det="27" sks="0"/>-->
       <item name="Prototype Gordian Earrings of Slaying" str="40" acc="0" crt="0" det="34" sks="25"/>
     </Ears>
     <Wrists>
       <item name="Fabled Bracelet of Slaying" str="47" acc="44" crt="30" det="0" sks="0"/>
       <item name="Gordian Wristband of Slaying" str="47" acc="0" crt="0" det="29" sks="44"/>
-      <item name="Ardent Bracelet of Slaying" str="43" acc="39" crt="28" det="0" sks="0"/>
+<!--      <item name="Ardent Bracelet of Slaying" str="43" acc="39" crt="28" det="0" sks="0"/>-->
       <item name="Prototype Gordian Wristband of Slaying" str="40" acc="0" crt="25" det="0" sks="36"/>
     </Wrists>
     <LeftRing>
