--- a/DragoonSimulator/DragoonSimulator.csproj
+++ b/DragoonSimulator/DragoonSimulator.csproj
@@ -70,6 +70,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="HigherSkillSpeedRotation.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Rotation.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
