Rename some files to make it clearer what they represent.

--- a/DragoonSimulator/App.config
+++ b/DragoonSimulator/App.config
@@ -8,7 +8,7 @@
   </startup>
   <appSettings>
     <!-- FileName of the file containing the rotation -->
-    <add key="RotationFileName" value="HigherSkillSpeedRotation.txt"/>
+    <add key="RotationFileName" value="StandardRotation.txt"/>
     
     <!-- Attributes and Offensive Stats -->
     <add key="STR" value="1018"/>
@@ -30,13 +30,13 @@
     <add key="BASE_DET" value="218"/>
     <add key="BASE_SKS" value="354"/>
     <add key="MIN_ACC" value="637"/>
-    <add key="MIN_SKS" value="627"/>
-    <add key="MAX_SKS" value="669"/>
+    <add key="MIN_SKS" value="463"/>
+    <add key="MAX_SKS" value="626"/>
   </appSettings>
   <Inventory>
     <MainHand>
-<!--      <item name="Gordian Trident" wd="76.00" aa="72.96" delay="2.88" str="109" acc="0" crt="71" det="97" sks="0"/>-->
-<!--      <item name="Brionac" wd="76.00" aa="72.96" delay="2.80" str="109" acc="0" crt="102" det="0" sks="71"/>-->
+      <item name="Gordian Trident" wd="76.00" aa="72.96" delay="2.88" str="109" acc="0" crt="71" det="97" sks="0"/>
+      <item name="Brionac" wd="76.00" aa="72.96" delay="2.80" str="109" acc="0" crt="102" det="0" sks="71"/>
       <item name="Antiquated Brionac" wd="74.00" aa="71.04" delay="2.88" str="101" acc="0" crt="92" det="0" sks="64"/>
       <item name="Hive Spear" wd="72.00" aa="67.20" delay="2.80" str="92" acc="0" crt="83" det="0" sks="58"/>
     </MainHand>
@@ -48,7 +48,7 @@
     </Head>
     <Body>
       <item name="Dragonlancer's Plackart" str="101" acc="94" crt="66" det="0" sks="0"/>
-<!--      <item name="Gordian Mail of Maiming" str="101" acc="0" crt="0" det="63" sks="94"/>-->
+      <item name="Gordian Mail of Maiming" str="101" acc="0" crt="0" det="63" sks="94"/>
 <!--      <item name="Antiquated Dragonlancer's Plackart" str="93" acc="86" crt="60" det="0" sks="0"/>-->
       <item name="Prototype Gordian Mail of Maiming" str="86" acc="0" crt="77" det="0" sks="54"/>
     </Body>
