Fixed incorrect delay on Brionac, added a test rotation file. Changed some defaults in the app.config.

--- a/DragoonSimulator/App.config
+++ b/DragoonSimulator/App.config
@@ -8,17 +8,17 @@
   </startup>
   <appSettings>
     <!-- FileName of the file containing the rotation -->
-    <add key="RotationFileName" value="StandardRotation.txt"/>
+    <add key="RotationFileName" value="DoubleCTRotation.txt"/>
     
     <!-- Attributes and Offensive Stats -->
-    <add key="STR" value="1018"/>
-    <add key="CRT" value="750"/>
-    <add key="DET" value="398"/>
-    <add key="SKS" value="630"/>
+    <add key="STR" value="1104"/>
+    <add key="CRT" value="944"/>
+    <add key="DET" value="352"/>
+    <add key="SKS" value="590"/>
 
     <!-- Weapon Stats -->
-    <add key="WD" value="74"/>
-    <add key="AA" value="71.04"/>
+    <add key="WD" value="76"/>
+    <add key="AA" value="72.96"/>
     <add key="AA_DELAY" value="2.88"/>
     
     <!-- Base Stats - Used for BIS Solver. When using the standard rotation, 
@@ -36,9 +36,9 @@
   <Inventory>
     <MainHand>
       <item name="Gordian Trident" wd="76.00" aa="72.96" delay="2.88" str="109" acc="0" crt="71" det="97" sks="0"/>
-      <item name="Brionac" wd="76.00" aa="72.96" delay="2.80" str="109" acc="0" crt="102" det="0" sks="71"/>
-      <item name="Antiquated Brionac" wd="74.00" aa="71.04" delay="2.88" str="101" acc="0" crt="92" det="0" sks="64"/>
-      <item name="Hive Spear" wd="72.00" aa="67.20" delay="2.80" str="92" acc="0" crt="83" det="0" sks="58"/>
+      <item name="Brionac" wd="76.00" aa="72.96" delay="2.88" str="109" acc="0" crt="102" det="0" sks="71"/>
+<!--      <item name="Antiquated Brionac" wd="74.00" aa="71.04" delay="2.88" str="101" acc="0" crt="92" det="0" sks="64"/>-->
+<!--      <item name="Hive Spear" wd="72.00" aa="67.20" delay="2.80" str="92" acc="0" crt="83" det="0" sks="58"/>-->
     </MainHand>
     <Head>
       <item name="Dragonlancer's Mesail" str="62" acc="0" crt="0" det="56" sks="41"/>
@@ -55,14 +55,13 @@
     <Hands>
       <item name="Dragonlancer's Vambraces" str="62" acc="41" crt="0" det="56" sks="0"/>
       <item name="Gordian Gauntlets of Maiming" str="62" acc="0" crt="58" det="0" sks="41"/>
-<!--      <item name="Antiquated Dragonlancer's Vambraces" str="57" acc="37" crt="0" det="50" sks="0"/>-->
       <item name="Prototype Gordian Gauntlets of Maiming" str="53" acc="47" crt="0" det="32" sks="0"/>
     </Hands>
     <Waist>
       <item name="Gordian Tassets of Maiming" str="47" acc="44" crt="0" det="0" sks="30"/>
       <item name="Fabled Belt of Maiming" str="47" acc="0" crt="30" det="42" sks="0"/>
 <!--      <item name="Ardent Belt of Maiming" str="43" acc="0" crt="28" det="38" sks="0"/>-->
-      <item name="Prototype Gordian Tassets of Maiming" str="40" acc="36" crt="0" det="24" sks="0"/>
+<!--      <item name="Prototype Gordian Tassets of Maiming" str="40" acc="36" crt="0" det="24" sks="0"/>-->
     </Waist>
     <Legs>
       <item name="Dragonlancer's Cuissots" str="101" acc="0" crt="94" det="0" sks="66"/>
@@ -74,7 +73,7 @@
       <item name="Dragonlancer's Schynbalds" str="62" acc="58" crt="0" det="39" sks="0"/>
       <item name="Gordian Sabatons of Maiming" str="62" acc="41" crt="0" det="0" sks="58"/>
 <!--      <item name="Antiquated Dragonlancer's Schynbalds" str="57" acc="53" crt="0" det="35" sks="0"/>-->
-      <item name="Prototype Gordian Sabatons of Maiming" str="53" acc="33" crt="0" det="45" sks="0"/>
+<!--      <item name="Prototype Gordian Sabatons of Maiming" str="53" acc="33" crt="0" det="45" sks="0"/>-->
     </Feet>
     <OffHand>
       <item name="N/A" str="0" acc="0" crt="0" det="0" sks="0"/>
