--- a/DragoonSimulator/App.config
+++ b/DragoonSimulator/App.config
@@ -10,6 +10,7 @@
     <!-- Files containing the standard rotation and the higher skill speed rotation -->
     <add key="StandardRotation" value="DoubleCTRotation.txt"/>
     <add key="HigherSkillSpeedRotation" value="HigherSkillSpeedRotation.txt"/>
+    <add key="LoopRotationInfinitely" value="false"/>
     
     <!-- Attributes and Offensive Stats for the regular simulation mode -->
     <add key="STR" value="1103"/>
