Allow user customization of the encounter length.

--- a/DragoonSimulator/App.config
+++ b/DragoonSimulator/App.config
@@ -10,7 +10,14 @@
     <!-- Files containing the standard rotation and the higher skill speed rotation -->
     <add key="StandardRotation" value="DoubleCTRotation.txt"/>
     <add key="HigherSkillSpeedRotation" value="HigherSkillSpeedRotation.txt"/>
+    
+    <!-- 
+    Setting this to true means that the rotation files will loop. Setting this to
+    false means that it won't loop and it will execute only once, stopping if it reaches
+    the end before the encounter length has elapsed. 
+    -->
     <add key="LoopRotationInfinitely" value="false"/>
+    <add key="EncounterLengthSeconds" value="191"/>
     
     <!-- Attributes and Offensive Stats for the regular simulation mode -->
     <add key="STR" value="1103"/>
