Fixed erroneous method of modeling animation lock durations.

--- a/DragoonSimulator/App.config
+++ b/DragoonSimulator/App.config
@@ -17,13 +17,14 @@
     -->
     <add key="LoopRotationInfinitely" value="false"/>
     <add key="EncounterLengthSeconds" value="183"/>
+    <add key="GlobalAnimationLockMs" value="735"/>
     
     <!-- Attributes and Offensive Stats for the regular simulation mode. Party bonus is
     not added to this STR value; it is used as-is. -->
     <add key="STR" value="1111"/>
     <add key="CRT" value="869"/>
     <add key="DET" value="454"/>
-    <add key="SKS" value="711"/>
+    <add key="SKS" value="632"/>
 
     <!-- Weapon Stats for the regular simulation mode -->
     <add key="WD" value="76"/>
@@ -45,52 +46,53 @@
     <add key="BASE_CRT" value="354"/>
     <add key="BASE_DET" value="218"/>
     <add key="BASE_SKS" value="354"/>
-    <add key="MIN_ACC" value="647"/>
+    <add key="MIN_ACC" value="595"/>
     <add key="MIN_SKS" value="500"/>
     <add key="MAX_SKS" value="711"/>
   </appSettings>
   <Inventory>
     <MainHand>
+      <item name="Rhongomiant" wd="76.00" aa="72.96" delay="2.88" str="109" acc="0" crt="0" det="68" sks="102"/>
       <item name="Gordian Trident" wd="76.00" aa="72.96" delay="2.88" str="109" acc="0" crt="71" det="97" sks="0"/>
       <item name="Brionac" wd="76.00" aa="72.96" delay="2.88" str="109" acc="0" crt="102" det="0" sks="71"/>
-      <item name="Antiquated Brionac" wd="74.00" aa="71.04" delay="2.88" str="101" acc="0" crt="92" det="0" sks="64"/>
-      <item name="Hive Spear" wd="72.00" aa="67.20" delay="2.80" str="92" acc="0" crt="83" det="0" sks="58"/>
+<!--      <item name="Antiquated Brionac" wd="74.00" aa="71.04" delay="2.88" str="101" acc="0" crt="92" det="0" sks="64"/>-->
+<!--      <item name="Hive Spear" wd="72.00" aa="67.20" delay="2.80" str="92" acc="0" crt="83" det="0" sks="58"/>-->
     </MainHand>
     <Head>
       <item name="Dragonlancer's Mesail" str="62" acc="0" crt="0" det="56" sks="41"/>
       <item name="Gordian Sallet of Maiming" str="62" acc="58" crt="41" det="0" sks="0"/>
-      <item name="Antiquated Dragonlancer's Mesail" str="57" acc="0" crt="0" det="50" sks="37"/>
-      <item name="Prototype Gordian Sallet of Maiming" str="53" acc="47" crt="33" det="0" sks="0"/>
+<!--      <item name="Antiquated Dragonlancer's Mesail" str="57" acc="0" crt="0" det="50" sks="37"/>-->
+<!--      <item name="Prototype Gordian Sallet of Maiming" str="53" acc="47" crt="33" det="0" sks="0"/>-->
     </Head>
     <Body>
       <item name="Dragonlancer's Plackart" str="101" acc="94" crt="66" det="0" sks="0"/>
       <item name="Gordian Mail of Maiming" str="101" acc="0" crt="0" det="63" sks="94"/>
-      <item name="Antiquated Dragonlancer's Plackart" str="93" acc="86" crt="60" det="0" sks="0"/>
-      <item name="Prototype Gordian Mail of Maiming" str="86" acc="0" crt="77" det="0" sks="54"/>
+<!--      <item name="Antiquated Dragonlancer's Plackart" str="93" acc="86" crt="60" det="0" sks="0"/>-->
+<!--      <item name="Prototype Gordian Mail of Maiming" str="86" acc="0" crt="77" det="0" sks="54"/>-->
     </Body>
     <Hands>
       <item name="Dragonlancer's Vambraces" str="62" acc="41" crt="0" det="56" sks="0"/>
       <item name="Gordian Gauntlets of Maiming" str="62" acc="0" crt="58" det="0" sks="41"/>
-      <item name="Antiquated Dragonlancer's Vambraces" str="57" acc="37" crt="0" det="50" sks="0"/>
-      <item name="Prototype Gordian Gauntlets of Maiming" str="53" acc="47" crt="0" det="32" sks="0"/>
+<!--      <item name="Antiquated Dragonlancer's Vambraces" str="57" acc="37" crt="0" det="50" sks="0"/>-->
+<!--      <item name="Prototype Gordian Gauntlets of Maiming" str="53" acc="47" crt="0" det="32" sks="0"/>-->
     </Hands>
     <Waist>
       <item name="Gordian Tassets of Maiming" str="47" acc="44" crt="0" det="0" sks="30"/>
       <item name="Fabled Belt of Maiming" str="47" acc="0" crt="30" det="42" sks="0"/>
-      <item name="Ardent Belt of Maiming" str="43" acc="0" crt="28" det="38" sks="0"/>
+<!--      <item name="Ardent Belt of Maiming" str="43" acc="0" crt="28" det="38" sks="0"/>-->
       <item name="Prototype Gordian Tassets of Maiming" str="40" acc="36" crt="0" det="24" sks="0"/>
     </Waist>
     <Legs>
       <item name="Dragonlancer's Cuissots" str="101" acc="0" crt="94" det="0" sks="66"/>
       <item name="Gordian Breeches of Maiming" str="101" acc="94" crt="0" det="63" sks="0"/>
-      <item name="Antiquated Dragonlancer's Cuissots" str="93" acc="0" crt="86" det="0" sks="60"/>
-      <item name="Prototype Gordian Breeches of Maiming" str="86" acc="54" crt="0" det="0" sks="77"/>
+<!--      <item name="Antiquated Dragonlancer's Cuissots" str="93" acc="0" crt="86" det="0" sks="60"/>-->
+<!--      <item name="Prototype Gordian Breeches of Maiming" str="86" acc="54" crt="0" det="0" sks="77"/>-->
     </Legs>
     <Feet>
       <item name="Dragonlancer's Schynbalds" str="62" acc="58" crt="0" det="39" sks="0"/>
       <item name="Gordian Sabatons of Maiming" str="62" acc="41" crt="0" det="0" sks="58"/>
-      <item name="Antiquated Dragonlancer's Schynbalds" str="57" acc="53" crt="0" det="35" sks="0"/>
-      <item name="Prototype Gordian Sabatons of Maiming" str="53" acc="33" crt="0" det="45" sks="0"/>
+<!--      <item name="Antiquated Dragonlancer's Schynbalds" str="57" acc="53" crt="0" det="35" sks="0"/>-->
+<!--      <item name="Prototype Gordian Sabatons of Maiming" str="53" acc="33" crt="0" det="45" sks="0"/>-->
     </Feet>
     <OffHand>
       <item name="N/A" str="0" acc="0" crt="0" det="0" sks="0"/>
@@ -98,34 +100,34 @@
     <Neck>
       <item name="Fabled Necklace of Slaying" str="47" acc="0" crt="44" det="0" sks="30"/>
       <item name="Gordian Neckband of Slaying" str="47" acc="30" crt="0" det="42" sks="0"/>
-      <item name="Ardent Necklace of Slaying" str="43" acc="0" crt="39" det="0" sks="28"/>
+<!--      <item name="Ardent Necklace of Slaying" str="43" acc="0" crt="39" det="0" sks="28"/>-->
       <item name="Prototype Gordian Neckband of Slaying" str="40" acc="36" crt="25" det="0" sks="0"/>
     </Neck>
     <Ears>
       <item name="Fabled Earrings of Slaying" str="47" acc="44" crt="0" det="29" sks="0"/>
       <item name="Gordian Earrings of Slaying" str="47" acc="0" crt="44" det="29" sks="0"/>
-      <item name="Ardent Earrings of Slaying" str="43" acc="39" crt="0" det="27" sks="0"/>
+<!--      <item name="Ardent Earrings of Slaying" str="43" acc="39" crt="0" det="27" sks="0"/>-->
       <item name="Prototype Gordian Earrings of Slaying" str="40" acc="0" crt="0" det="34" sks="25"/>
     </Ears>
     <Wrists>
       <item name="Fabled Bracelet of Slaying" str="47" acc="44" crt="30" det="0" sks="0"/>
       <item name="Gordian Wristband of Slaying" str="47" acc="0" crt="0" det="29" sks="44"/>
-      <item name="Ardent Bracelet of Slaying" str="43" acc="39" crt="28" det="0" sks="0"/>
+<!--      <item name="Ardent Bracelet of Slaying" str="43" acc="39" crt="28" det="0" sks="0"/>-->
       <item name="Prototype Gordian Wristband of Slaying" str="40" acc="0" crt="25" det="0" sks="36"/>
     </Wrists>
     <LeftRing>
       <item name="Fabled Ring of Slaying" str="47" acc="30" crt="0" det="0" sks="44"/>
       <item name="Gordian Ring of Slaying" str="47" acc="44" crt="30" det="0" sks="0"/>
-      <item name="Ardent Ring of Slaying" str="43" acc="28" crt="0" det="0" sks="39"/>
+<!--      <item name="Ardent Ring of Slaying" str="43" acc="28" crt="0" det="0" sks="39"/>-->
       <item name="Prototype Gordian Ring of Slaying" str="40" acc="0" crt="36" det="24" sks="0"/>
-      <item name="Asuran Ring of Slaying" str="36" acc="22" crt="0" det="0" sks="32"/>
+<!--      <item name="Asuran Ring of Slaying" str="36" acc="22" crt="0" det="0" sks="32"/>-->
     </LeftRing>
     <RightRing>
       <item name="Fabled Ring of Slaying" str="47" acc="30" crt="0" det="0" sks="44"/>
       <item name="Gordian Ring of Slaying" str="47" acc="44" crt="30" det="0" sks="0"/>
-      <item name="Ardent Ring of Slaying" str="43" acc="28" crt="0" det="0" sks="39"/>
+<!--      <item name="Ardent Ring of Slaying" str="43" acc="28" crt="0" det="0" sks="39"/>-->
       <item name="Prototype Gordian Ring of Slaying" str="40" acc="0" crt="36" det="24" sks="0"/>
-      <item name="Asuran Ring of Slaying" str="36" acc="22" crt="0" det="0" sks="32"/>
+<!--      <item name="Asuran Ring of Slaying" str="36" acc="22" crt="0" det="0" sks="32"/>-->
     </RightRing>
     <Food>
       <item name="Deviled Eggs" accModifier="1.02" maxAccBonus="10" crtModifier="1.05" maxCrtBonus="24" detModifier="1.00" maxDetBonus="0" sksModifier="1.00" maxSksBonus="0"/>
