Changed naming convention for rotation file and added better documentation.

--- a/DragoonSimulator/App.config
+++ b/DragoonSimulator/App.config
@@ -7,8 +7,14 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
   </startup>
   <appSettings>
-    <!-- Files containing the standard rotation and the higher skill speed rotation -->
-    <add key="StandardRotation" value="DoubleCTRotation.txt"/>
+    <!-- Files containing the rotation chosen. Each time you change the rotation significantly,
+    it is recommended that you validate the new skill minimum and maximum skill speeds by running 
+    the regular simulation mode manually. After that, delete the file "SkillSpeedRankings.txt" in
+    the application directory and regenerate the skill speed rankings. NOTE: When regenerating skill
+    speed rankings, ensure that the attributes and offensive stats below are set to reasonable balanced
+    max ilvl values as they are used to calculate a heuristic for skill speed will result in bad results
+    otherwise. -->
+    <add key="Rotation" value="DoubleCTRotation.txt"/>
     
     <!-- 
     Setting this to true means that the rotation files will loop. Setting this to
@@ -17,14 +23,16 @@
     -->
     <add key="LoopRotationInfinitely" value="false"/>
     <add key="EncounterLengthSeconds" value="183"/>
+    <!-- It is not recommended to change this value as the global animation lock is 735ms for DRG. -->
     <add key="GlobalAnimationLockMs" value="735"/>
     
     <!-- Attributes and Offensive Stats for the regular simulation mode. Party bonus is
-    not added to this STR value; it is used as-is. -->
+    not added to this STR value; it is used as-is, so you will have to include the party
+    bonus in your STR value. -->
     <add key="STR" value="1111"/>
-    <add key="CRT" value="869"/>
-    <add key="DET" value="454"/>
-    <add key="SKS" value="632"/>
+    <add key="CRT" value="761"/>
+    <add key="DET" value="573"/>
+    <add key="SKS" value="714"/>
 
     <!-- Weapon Stats for the regular simulation mode -->
     <add key="WD" value="76"/>
@@ -33,12 +41,15 @@
     
     <!-- Base Stats - Used for BIS Solver. 
     
-    Warning: The regular stats above should be set to the stats of an end-game set as the skill speed
-    modifiers are in part derived from the base stats above. Therefore, not setting them to an endgame
-    stat set can result in different results.
+    The BIS solver will use the supplied rotation for SKS values between 527 and 719.
+    For values outside of that range, modifications will need to be made to the rotation file,
+    as the presupplied rotation file only supports SKS values between 527 and 719.
     
-    The BIS solver will use the standard rotation for SKS values between 527 and 719.
-    For values outside of that range, modifications will need to be made to the rotation file.
+    In order to use the BIS solver, ensure that your selected inventory is available in the Inventory
+    section and not commented out, set the minimum accuracy, and run the BIS solver.
+    
+    Remember to follow the skill speed ranking generation process first if using it for the first time
+    or if there is a new rotation.
 
     -->
     <add key="BASE_STR" value="300"/>
@@ -46,7 +57,7 @@
     <add key="BASE_CRT" value="354"/>
     <add key="BASE_DET" value="218"/>
     <add key="BASE_SKS" value="354"/>
-    <add key="MIN_ACC" value="595"/>
+    <add key="MIN_ACC" value="450"/>
     <add key="MIN_SKS" value="527"/>
     <add key="MAX_SKS" value="719"/>
   </appSettings>
@@ -138,6 +149,7 @@
       <item name="Morel Salad" accModifier="1.00" maxAccBonus="0" crtModifier="1.00" maxCrtBonus="0" detModifier="1.05" maxDetBonus="30" sksModifier="1.02" maxSksBonus="15"/>
       <item name="Deep-Fried Okeanis" accModifier="1.00" maxAccBonus="0" crtModifier="1.00" maxCrtBonus="0" detModifier="1.02" maxDetBonus="12" sksModifier="1.05" maxSksBonus="38"/>
       <item name="Urchin Loaf" accModifier="1.06" maxAccBonus="40" crtModifier="1.00" maxCrtBonus="0" detModifier="1.03" maxDetBonus="13" sksModifier="1.00" maxSksBonus="0"/>
+      <item name="Steamed Staff" accModifier="1.00" maxAccBonus="0" crtModifier="1.06" maxCrtBonus="40" detModifier="1.00" maxDetBonus="0" sksModifier="1.03" maxSksBonus="16"/>
     </Food>
   </Inventory>
 </configuration>
